@@ -7,6 +7,7 @@ import com.example.yoto.model.playList.PlayListComplexResponseDTO;
 import com.example.yoto.model.video.Video;
 import com.example.yoto.model.video.VideoService;
 import com.example.yoto.model.video.VideoSimpleResponseDTO;
+import com.example.yoto.util.Util;
 import lombok.SneakyThrows;
 import org.apache.commons.io.FilenameUtils;
 import org.modelmapper.ModelMapper;
@@ -17,61 +18,73 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
 import java.io.File;
 import java.nio.file.Files;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static com.example.yoto.util.Util.*;
+
 @Service
 public class UserService {
-    public static final String LOGGED = "logged";
-    public static final String LOGGED_FROM = "logged_from";
-    public static final String USER_ID = "user_id";
 
-    @Autowired
-    private UserRepository userRepository;
     @Autowired
     private PasswordEncoder passwordEncoder;
     @Autowired
     private ModelMapper modelMapper;
     @Autowired
     private JavaMailSender javaMailSender;
+    @Autowired
+    private Util util;
+
 
     public UserSimpleResponseDTO register(UserRegisterDTO userDTO) {
-        if (userDTO.getFirstName() == null || userDTO.getFirstName().isBlank()) {
-            throw new BadRequestException("First name is mandatory");
+        String firstName = userDTO.getFirstName();
+        if (firstName.trim().isEmpty() || firstName.length() > USER_NAME_MAX_LENGTH) {
+            throw new BadRequestException("Invalid first name!");
         }
-        if (userDTO.getLastName() == null || userDTO.getLastName().isBlank()) {
-            throw new BadRequestException("Last name is mandatory");
+        String lastName = userDTO.getLastName();
+        if (lastName.trim().isEmpty() || lastName.length() > USER_NAME_MAX_LENGTH) {
+            throw new BadRequestException("Invalid last name!");
         }
-        if (userDTO.getPassword() == null || userDTO.getPassword().isBlank()) {
-            throw new BadRequestException("Password is mandatory");
+        String password = userDTO.getPassword();
+        if (password.trim().isEmpty() || password.length() > USER_PASSWORD_MAX_LENGTH) {
+            throw new BadRequestException("Invalid password!");
         }
         if (!userDTO.getPassword().matches("^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\\S+$).{8,}$")) {
-            throw new BadRequestException("Password is too weak");
+            throw new BadRequestException("Password is too weak!");
         }
-        if (!userDTO.getPassword().equals(userDTO.getConfirmPassword())) {
-            throw new BadRequestException("Passwords mismatch");
+        String configPassword = userDTO.getConfirmPassword();
+        if (configPassword.trim().isEmpty() || configPassword.length() > USER_PASSWORD_MAX_LENGTH) {
+            throw new BadRequestException("Invalid config password!");
         }
-        if (userDTO.getEmail() == null || userDTO.getEmail().isBlank()) {
-            throw new BadRequestException("Email is mandatory");
+        if (!userDTO.getPassword().equals(configPassword)) {
+            throw new BadRequestException("Passwords mismatch!");
         }
-        //todo check
-        if (!userDTO.getEmail().matches("^[a-zA-Z0-9_!#$%&’*+/=?`{|}~^.-]+@[a-zA-Z0-9.-]+$")) {
-            throw new BadRequestException("Email is invalid");
+        String email = userDTO.getEmail();
+        if (email.trim().isEmpty() || email.length() > USER_EMAIL_MAX_LENGTH) {
+            throw new BadRequestException("Invalid email!");
         }
-        //todo
+        if (!email.matches("^[a-zA-Z0-9_!#$%&’*+/=?`{|}~^.-]+@[a-zA-Z0-9.-]+$")) {
+            throw new BadRequestException("Invalid email!");
+        }
         if (userDTO.getDateOfBirth() == null) {
-            throw new BadRequestException("Invalid date of birth");
+            throw new BadRequestException("Invalid date of birth!");
         }
-        if (userRepository.findByEmail(userDTO.getEmail()) != null) {
-            throw new BadRequestException("User already exists");
+        String phoneNumber = userDTO.getPhoneNumber();
+        if (phoneNumber.trim().isEmpty() || phoneNumber.length() > USER_PHONE_NUMBER_MAX_LENGTH) {
+            throw new BadRequestException("Invalid phoneNumber!");
+        }
+        String aboutMe = userDTO.getAboutMe();
+        if (aboutMe != null && aboutMe.length() > USER_ABOUT_ME_MAX_LENGTH) {
+            throw new BadRequestException("The text is too long!");
+        }
+        if (util.userRepository.findByEmail(userDTO.getEmail()) != null) {
+            throw new BadRequestException("User already exists!");
         }
 
-        if (userRepository.findByPhoneNumber(userDTO.getPhoneNumber()) != null) {
-            throw new BadRequestException("User already exists");
+        if (util.userRepository.findByPhoneNumber(userDTO.getPhoneNumber()) != null) {
+            throw new BadRequestException("User already exists!");
         }
         User user = new User();
         user.setFirstName(userDTO.getFirstName());
@@ -84,20 +97,20 @@ public class UserService {
         user.setGender(userDTO.getGender());
         user.setProfileImageUrl(userDTO.getProfileImageUrl());
         user.setBackgroundImageUrl(userDTO.getBackgroundImageUrl());
-        userRepository.save(user);
+        util.userRepository.save(user);
 
         SimpleMailMessage msg = new SimpleMailMessage();
         msg.setFrom("kaltodor11@gmail.com");
         msg.setTo(user.getEmail());
         msg.setSubject("Verify account");
-        msg.setText("You have to verify tour account.\nPlease follow this link: http://localhost:3333/users/verify_registration/"+user.getId());
+        msg.setText("You have to verify tour account.\nPlease follow this link: http://localhost:3333/users/verify_registration/" + user.getId());
         javaMailSender.send(msg);
 
         return userToSimpleDTO(user);
     }
 
     public UserSimpleResponseDTO verifyRegistration(int id) {
-        User user = getUserById(id);
+        User user = util.userGetById(id);
         user.setVerified(true);
         SimpleMailMessage msg = new SimpleMailMessage();
         msg.setFrom("kaltodor11@gmail.com");
@@ -105,30 +118,29 @@ public class UserService {
         msg.setSubject("Verified");
         msg.setText("You have verified your account");
         javaMailSender.send(msg);
-        userRepository.save(user);
+        util.userRepository.save(user);
 
         return userToSimpleDTO(user);
     }
 
     public UserSimpleResponseDTO login(User user) {
-        if (user.getEmail() == null || user.getEmail().isBlank()) {
-            throw new BadRequestException("Username is mandatory");
+        String email = user.getEmail();
+        if (email.trim().isEmpty() || email.length() > USER_EMAIL_MAX_LENGTH) {
+            throw new BadRequestException("Invalid email!");
         }
-        if (user.getPassword() == null || user.getPassword().isBlank()) {
-            throw new BadRequestException("Password is mandatory");
+        String password = user.getPassword();
+        if (password.trim().isEmpty() || password.length() > USER_PASSWORD_MAX_LENGTH) {
+            throw new BadRequestException("Invalid password!");
         }
-        User user1 = userRepository.findByEmail(user.getEmail());
-        if (user1==null){
-            throw new NotFoundException("User not found");
+        User user1 = util.userRepository.findByEmail(user.getEmail());
+        if (user1 == null) {
+            throw new NotFoundException("Wrong credentials!");
         }
-        if (!user1.isVerified()){
+        if (!user1.isVerified()) {
             throw new BadRequestException("You have to verify your account first!");
         }
-        if (!user.getEmail().equals(user1.getEmail())) {
-            throw new UnauthorizedException("Wrong email");
-        }
         if (!passwordEncoder.matches(user.getPassword(), user1.getPassword())) {
-            throw new UnauthorizedException("Wrong credentials");
+            throw new UnauthorizedException("Wrong credentials!");
         }
 
         return userToSimpleDTO(user1);
@@ -136,73 +148,55 @@ public class UserService {
 
     public UserComplexResponseDTO getById(int id) {
         if (id > 0) {
-
-            return userToComplexDTO(getUserById(id));
+            return userToComplexDTO(util.userGetById(id));
         }
         throw new BadRequestException("Id is not positive");
     }
 
-    public UserSimpleResponseDTO DeleteById(int id) {
+    public void DeleteById(int id) {
         if (id > 0) {
-            User user = getUserById(id);
-            userRepository.deleteById(id);
-            return userToSimpleDTO(user);
+            util.userGetById(id);
+            util.userRepository.deleteById(id);
+        } else {
+            throw new BadRequestException("Id is not positive");
         }
-        throw new BadRequestException("Id is not positive");
     }
 
     public List<UserSimpleResponseDTO> getAll() {
         List<UserSimpleResponseDTO> dtos = new ArrayList<>();
-        List<User> users = userRepository.findAll();
+        List<User> users = util.userRepository.findAll();
         for (User user : users) {
             dtos.add(userToSimpleDTO(user));
         }
         return dtos;
     }
 
-    //todo
     public UserSimpleResponseDTO edit(User user) {
-        getUserById(user.getId());
-        return userToSimpleDTO(userRepository.save(user));
+        util.userGetById(user.getId());
+        return userToSimpleDTO(util.userRepository.save(user));
     }
 
     public int followUser(int publisherId, int observerId) {
-
-        //Todo msg exeption
-
-        User observer = getUserById(observerId);
-        User publisher = getUserById(publisherId);
+        User observer = util.userGetById(observerId);
+        User publisher = util.userGetById(publisherId);
         if (publisher.getObserverUsers().contains(observer)) {
-
             throw new BadRequestException("Already exists in the list of followers");
         }
         publisher.getObserverUsers().add(observer);
-        userRepository.save(publisher);
+        util.userRepository.save(publisher);
         return publisher.getObserverUsers().size();
     }
 
     public int unFollowUser(int publisherId, int observerId) {
-        //Todo msg exeption
-        User observer = getUserById(observerId);
-        User publisher = getUserById(publisherId);
+        User observer = util.userGetById(observerId);
+        User publisher = util.userGetById(publisherId);
         if (!publisher.getObserverUsers().contains(observer)) {
             throw new BadRequestException("Observer not follow this user");
         }
         publisher.getObserverUsers().remove(observer);
-        userRepository.save(publisher);
+        util.userRepository.save(publisher);
         return publisher.getObserverUsers().size();
     }
-
-
-    public void validateLogin(HttpSession session, HttpServletRequest request) {
-        boolean newSession = session.isNew();
-        boolean logged = session.getAttribute(LOGGED) != null && ((Boolean) session.getAttribute(LOGGED));
-        boolean sameIp = request.getRemoteAddr().equals(session.getAttribute(LOGGED_FROM));
-        if (newSession || !logged || !sameIp) {
-            throw new UnauthorizedException("You have to log in!");
-        }
-    }
-
 
     public static UserSimpleResponseDTO userToSimpleDTO(User user) {
         UserSimpleResponseDTO userDto = new UserSimpleResponseDTO();
@@ -212,7 +206,7 @@ public class UserService {
         userDto.setAboutMe(user.getAboutMe());
         userDto.setProfileImageUrl(user.getProfileImageUrl());
         userDto.setFollowers(user.getObserverUsers().size());
-        userDto.setVideos(user.getVideos() != null ? user.getVideos().size() : 0);
+        userDto.setVideos(!user.getVideos().isEmpty() ? 0 : user.getVideos().size());
         return userDto;
     }
 
@@ -237,24 +231,24 @@ public class UserService {
     @SneakyThrows
     public String uploadProfileImage(MultipartFile file, int user_id) {
         String fileExtension = FilenameUtils.getExtension(file.getOriginalFilename());
-        User user = getUserById(user_id);
+        User user = util.userGetById(user_id);
         String userName = user.getFirstName();
         String fileName = userName + "&" + System.nanoTime() + "." + fileExtension;
-        Files.copy(file.getInputStream(), new File("uploads" + File.separator + fileName).toPath());
+        Files.copy(file.getInputStream(), new File(UPLOAD_FILES_DIRECTORY + File.separator + fileName).toPath());
         user.setProfileImageUrl(fileName);
-        userRepository.save(user);
+        util.userRepository.save(user);
         return fileName;
     }
 
     @SneakyThrows
     public String uploadBackgroundImage(MultipartFile file, int user_id) {
         String fileExtension = FilenameUtils.getExtension(file.getOriginalFilename());
-        User user = getUserById(user_id);
+        User user = util.userGetById(user_id);
         String userName = user.getLastName();
         String fileName = userName + "&" + System.nanoTime() + "." + fileExtension;
-        Files.copy(file.getInputStream(), new File("uploads" + File.separator + fileName).toPath());
+        Files.copy(file.getInputStream(), new File(UPLOAD_FILES_DIRECTORY + File.separator + fileName).toPath());
         user.setBackgroundImageUrl(fileName);
-        userRepository.save(user);
+        util.userRepository.save(user);
         return fileName;
     }
 
@@ -263,46 +257,44 @@ public class UserService {
             throw new BadRequestException("Name is mandatory!");
         }
         List<UserSimpleResponseDTO> dtos = new LinkedList<>();
-        List<User> users = userRepository.findAllByFirstNameContains(name);
+        List<User> users = util.userRepository.findAllByFirstNameContains(name);
         for (User user : users) {
             dtos.add(userToSimpleDTO(user));
         }
         return dtos;
     }
 
-    //TODO move in Util
-    private User getUserById(int id) {
-        return userRepository.findById(id).orElseThrow(() -> new NotFoundException("User not found"));
-    }
-
     public UserSimpleResponseDTO resetPassword(UserChangePasswordDTO changePasswordDTO, int user_id) {
-        User user = getUserById(user_id);
-        if (changePasswordDTO.getOldPass().trim().isEmpty()) {
+        User user = util.userGetById(user_id);
+        String oldPass = changePasswordDTO.getOldPass();
+        String newPass = changePasswordDTO.getNewPass();
+        String confirmPass = changePasswordDTO.getConfirmPass();
+
+        if (oldPass.trim().isEmpty() || oldPass.length() > USER_PASSWORD_MAX_LENGTH) {
             throw new BadRequestException("Old password is mandatory");
         }
-        if (changePasswordDTO.getNewPass().trim().isEmpty()) {
+        if (newPass.trim().isEmpty() || newPass.length() > USER_PASSWORD_MAX_LENGTH) {
             throw new BadRequestException("New password is mandatory");
         }
-        if (!passwordEncoder.matches(changePasswordDTO.getOldPass(), user.getPassword())){
+        if (!passwordEncoder.matches(oldPass, user.getPassword())) {
             throw new BadRequestException("Wrong old password");
-
         }
-        if (!changePasswordDTO.getNewPass().matches("^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\\S+$).{8,}$")) {
+        if (!newPass.matches("^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\\S+$).{8,}$")) {
             throw new BadRequestException("New password is too weak");
         }
-        if (!changePasswordDTO.getNewPass().equals(changePasswordDTO.getConfirmPass())) {
+        if (!newPass.equals(confirmPass)) {
             throw new BadRequestException("Passwords mismatch");
         }
-        if (changePasswordDTO.getNewPass().equals(changePasswordDTO.getOldPass())){
+        if (newPass.equals(oldPass)) {
             throw new BadRequestException("New password can not be the old password");
         }
-        user.setPassword(passwordEncoder.encode(changePasswordDTO.getNewPass()));
-        userRepository.save(user);
+        user.setPassword(passwordEncoder.encode(newPass));
+        util.userRepository.save(user);
         return userToSimpleDTO(user);
     }
 
     public UserSimpleResponseDTO forgottenPassword(String email) {
-        User user = userRepository.findByEmail(email);
+        User user = util.userRepository.findByEmail(email);
         SimpleMailMessage msg = new SimpleMailMessage();
         msg.setFrom("kaltodor11@gmail.com");
         msg.setTo(email);
@@ -311,10 +303,8 @@ public class UserService {
         javaMailSender.send(msg);
 
         user.setPassword(passwordEncoder.encode("1234"));
-        userRepository.save(user);
+        util.userRepository.save(user);
 
         return userToSimpleDTO(user);
     }
-
-
 }
